Session_3/RouteTable.tf
resource "aws_route_table" "RouteTable" {
  vpc_id = aws_vpc.my_vpc.id

  route {
    cidr_block = var.cidr_block_route_table
    gateway_id = aws_internet_gateway.my_ig.id
  }

  tags = {
    Name = "${var.prefix} RouteTable"
  }
}
